resolving background image issue on mobile

--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -95,3 +95,9 @@
   background-repeat: repeat;
   background-image: url("data:image/svg+xml;utf8,%3Csvg viewBox=%220 0 1000 1000%22 xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cdefs%3E%3CradialGradient id=%22b%22 r=%22100%25%22 cx=%2250%25%22 cy=%2250%25%22%3E%3Cstop offset=%220%25%22 stop-color=%22%237c3aed%22%2F%3E%3Cstop offset=%22100%25%22 stop-color=%22%234910ac%22%2F%3E%3C%2FradialGradient%3E%3CclipPath id=%22a%22%3E%3Cpath fill=%22currentColor%22 d=%22M754.5 690.5Q624 881 383 820.5t-192.5-285Q239 311 422.5 242t323 94.5q139.5 163.5 9 354Z%22%2F%3E%3C%2FclipPath%3E%3C%2Fdefs%3E%3Cg clip-path=%22url(%23a)%22%3E%3Cpath fill=%22url(%23b)%22 d=%22M754.5 690.5Q624 881 383 820.5t-192.5-285Q239 311 422.5 242t323 94.5q139.5 163.5 9 354Z%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E");
 }
+
+@media only screen and (max-width: 767px) {
+  .parallax-section {
+    background-attachment: scroll;
+  }
+}
